--- a/.classpath
+++ b/.classpath
@@ -7,12 +7,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.s8.io.bytes">
+	<classpathentry combineaccessrules="false" kind="src" path="/com.s8.core.io.bytes">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="/com.s8.io.bohr.atom">
+	<classpathentry kind="src" path="/com.s8.core.io.bohr.atom">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
